--- a/friend.html
+++ b/friend.html
@@ -5,16 +5,6 @@
     <title>
         Friend website
     </title>
-    <!-- <style>
-        th, td {
-  font-size:larger;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  border-color:#F08080;
-  padding-top: 5px;
-  padding-bottom: 10px;
-  padding-right: 100px;
-}
-    </style> -->
 </head>
 <h1 style="padding-left: 400px;font-size: xx-large;position:stat
 ;background-color:#A6E1C5;">This is all about my friend</h1>
@@ -38,6 +28,12 @@
         <li>dinner</li>
         <li>sleep</li>
     </ol>
+    <h3 style="font-size:xx-large;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">My Friend's Favourite Food Places</h3>
+    <ul class="myUL" style="font-size: x-large;"> 
+      <li>Kottayam Dabha.</li>
+      <li>KFC,MC ' Donalds.</li>
+      <li>Barbeque Nation.</li>
+    </ul>
     <div class="box">
         <p style="padding-left: 600px;font-size:xx-large;"> Information about Him</p>
         <table>
